@@ -4,7 +4,6 @@
     "author": "LazyWizard",
     "utility": "true",
     "version": "2.3", #// Used internally - must be parseable as a float!
-    "devBuild": true,
     "description": "A collection of classes to aid modding. Not a mod in itself, but required by certain other mods.",
     "gameVersion": "0.8.1a",
     "jars": ["jars/LazyLib.jar","jars/LazyLib-Kotlin.jar"],
